language/move-lang/tests/move_check/expansion/use_function_same_name_as_function.exp
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_function_same_name_as_function.move:10:9
   │
 9 │     use 0x2::X::u;
   │                 - Alias previously defined here
10 │     fun u() {
   │         ^ Duplicate module member or alias 'u'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_function_same_name_as_function.move:17:22
   │
15 │     fun bar() {
   │         --- Alias previously defined here
16 │     }
17 │     use 0x2::X::u as bar;
   │                      ^^^ Duplicate module member or alias 'bar'. Top level names in a namespace must be unique

warning[W09001]: unused alias
   ┌─ tests/move_check/expansion/use_function_same_name_as_function.move:17:22
   │
17 │     use 0x2::X::u as bar;
   │                      ^^^ Unused 'use' of alias 'bar'. Consider removing it

